Kubernetes/apps/oauth2-proxy/service.yaml
# =============================================================================
# OAuth2 Proxy Service
# =============================================================================
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: utilities
  labels:
    app: oauth2-proxy
spec:
  type: ClusterIP
  selector:
    app: oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: http
    - name: metrics
      port: 44180
      targetPort: metrics
